fixed grid--inner outer margin on mobile

--- a/styles/layout/_grid.scss
+++ b/styles/layout/_grid.scss
@@ -12,7 +12,7 @@
 			[screen-end];
 	}
 	&--inner {
-		padding: 0 max(var(--colGap), calc(var(--sidebearing) + var(--colGap)));
+		padding: 0 max(var(--gutter), calc(var(--sidebearing) + var(--colGap)));
 		grid-template-columns: [screen-start grid-start col-1] 1fr [col-2] 1fr [col-3] 1fr [col-4] 1fr [col-5] 1fr [col-6] 1fr [col-7] 1fr [col-8] 1fr [col-9] 1fr [col-10] 1fr [col-11] 1fr [col-12] 1fr [grid-end screen-end];
 	}
 }
